# fin_analytics

./: .env.example  .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements.txt
admin_dashboard/: main.py
admin_dashboard/pages/: 1_Visao_Geral.py  2_Quarentena.py
app/: cli_test.py  dashboard.py  dependencies.py  main.py
app/api/: __init__.py  main.py  utils.py  validators.py
app/api/routes/: accounts.py  catalog.py  dashboard.py  governance.py  investments.py  transactions.py
app/api/schemas/: __init__.py  catalog.py  dashboard.py  governance.py  investments.py  transactions.py
app/api/services/: __init__.py  (+1 more)
app/components/: cards.py  charts.py
app/core/: __init__.py  formatters.py  shell.py  state.py
app/pages/: 1_home.py  2_investimentos.py  3_metas_e_orcamentos.py  4_admin.py
config/: categorias.csv  constants.py  metas.csv  settings.py
database/: queries.py  repository.py  schema.sql
domain/: categorization.py
etl/: extract.py  load.py  pipeline.py  transform.py  wealth_extract.py
frontend/: AGENTS.md  package-lock.json  package.json
models/: __init__.py  analytics_dto.py  core.py  schemas.py  transaction.py  wealth_dto.py  wealth_schemas.py
parsers/: __init__.py  myprofit.py  nubank.py
repositories/: analytics_repository.py  transacoes_repository.py  wealth_repository.py
scripts/: __init__.py  test_etl.py  test_import.py  test_queries.py  test_taxonomy.py
services/: __init__.py  categorizer.py  finance_service.py  goals_service.py  ingestion_service.py  market_service.py  portfolio_service.py  smart_categorizer.py  wealth_service.py
taxonomy/: __init__.py  categories.py  rules.csv
tests/: test_hashing.py  test_repositories_integration.py  test_utils.py
utils/: formatters.py  hashing.py  logger.py  normalization.py  parsers.py  semantic.py  text.py  transformers.py
(+181 files in other folders)
